## Copyright 2018 The Closure Stylesheets Authors.
##
## Licensed under the Apache License, Version 2.0 (the "License");
## you may not use this file except in compliance with the License.
## You may obtain a copy of the License at
##
##     http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS,
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
## See the License for the specific language governing permissions and
## limitations under the License.

licenses(["notice"])  # Apache 2.0

java_library(
    name = "css",
    srcs = [
        "AbstractCommandLineCompiler.java",
        "DefaultExitCodeHandler.java",
        "ExitCodeHandler.java",
        "GssFunctionMapProvider.java",
        "IdentitySubstitutionMap.java",
        "JobDescription.java",
        "JobDescriptionBuilder.java",
        "Locatable.java",
        "MinimalSubstitutionMap.java",
        "MultipleMappingSubstitutionMap.java",
        "OutputRenamingMapFormat.java",
        "PrefixingSubstitutionMap.java",
        "RecordingSubstitutionMap.java",
        "SimpleSplittingSubstitutionMap.java",
        "SimpleSplittingSubstitutionMapProvider.java",
        "SimpleSubstitutionMap.java",
        "SourceCode.java",
        "SourceCodeIndicator.java",
        "SourceCodeLocation.java",
        "SourceCodeLocationBuilder.java",
        "SplittingSubstitutionMap.java",
        "SubstitutionMap.java",
        "SubstitutionMapProvider.java",
        "Vendor.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_auto_value//jar",
        "@com_google_code_findbugs_jsr305//jar",
        "@com_google_code_gson//jar",
        "@com_google_guava//jar",
    ],
)
