## Copyright 2018 The Closure Stylesheets Authors.
##
## Licensed under the Apache License, Version 2.0 (the "License");
## you may not use this file except in compliance with the License.
## You may obtain a copy of the License at
##
##     http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS,
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
## See the License for the specific language governing permissions and
## limitations under the License.

licenses(["notice"])  # Apache 2.0

java_library(
    name = "commandline",
    srcs = [
        "DefaultCommandLineCompiler.java",
    ],
    deps = [
        "//src/com/google/common/css",
        "//src/com/google/common/css/compiler/ast",
        "//src/com/google/common/css/compiler/passes",
        "@com_google_code_findbugs_jsr305//jar",
        "@com_google_guava//jar",
    ],
)

java_library(
    name = "Closure",
    srcs = [
        "ClosureCommandLineCompiler.java",
        "RenamingType.java",
    ],
    visibility = [
        "//tests/com/google/common/css/compiler/commandline:__pkg__",
    ],
    deps = [
        ":commandline",
        "//src/com/google/common/css",
        "//src/com/google/common/css/compiler/ast",
        "@args4j//jar",
        "@com_google_code_findbugs_jsr305//jar",
        "@com_google_guava//jar",
    ],
)

java_binary(
    name = "ClosureCommandLineCompiler",
    main_class = "com.google.common.css.compiler.commandline.ClosureCommandLineCompiler",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":Closure",
    ],
)
