## Copyright 2018 The Closure Stylesheets Authors.
##
## Licensed under the Apache License, Version 2.0 (the "License");
## you may not use this file except in compliance with the License.
## You may obtain a copy of the License at
##
##     http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS,
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
## See the License for the specific language governing permissions and
## limitations under the License.

licenses(["notice"])  # Apache 2.0

java_library(
    name = "passes",
    srcs = [
        "AbbreviatePositionalValues.java",
        "AutoExpandBrowserPrefix.java",
        "BiDiFlipper.java",
        "BooleanExpressionEvaluator.java",
        "BrowserPrefixGenerator.java",
        "BrowserPrefixRule.java",
        "CheckDependencyNodes.java",
        "CheckMissingRequire.java",
        "CodeBuffer.java",
        "CodePrinter.java",
        "CollectConstantDefinitions.java",
        "CollectMixinDefinitions.java",
        "CollectProvideNamespaces.java",
        "ColorValueOptimizer.java",
        "CompactPrinter.java",
        "CompactPrintingVisitor.java",
        "ConstantDefinitions.java",
        "CreateComponentNodes.java",
        "CreateConditionalNodes.java",
        "CreateConstantReferences.java",
        "CreateDefinitionNodes.java",
        "CreateForLoopNodes.java",
        "CreateMixins.java",
        "CreateStandardAtRuleNodes.java",
        "CreateVendorPrefixedKeyframes.java",
        "CssClassRenaming.java",
        "DefaultGssSourceMapGenerator.java",
        "DefinitionPrintingVisitor.java",
        "DelegatingVisitor.java",
        "DisallowDuplicateDeclarations.java",
        "DummyErrorManager.java",
        "EliminateConditionalNodes.java",
        "EliminateEmptyRulesetNodes.java",
        "EliminateUnitsFromZeroNumericValues.java",
        "EliminateUselessRulesetNodes.java",
        "EnumeratingVisitor.java",
        "EvaluateCompileConstants.java",
        "FixupFontDeclarations.java",
        "GssSourceMapGenerator.java",
        "HandleMissingConstantDefinitions.java",
        "HandleUnknownAtRuleNodes.java",
        "HasConditionalNodes.java",
        "LocationBoundingVisitor.java",
        "LoopVariableReplacementPass.java",
        "MapChunkAwareNodesToChunk.java",
        "MarkDefaultDefinitions.java",
        "MarkNonFlippableNodes.java",
        "MarkRemovableRulesetNodes.java",
        "MarkRemovableRulesetNodesForChunk.java",
        "MergeAdjacentRulesetNodesWithSameDeclarations.java",
        "MergeAdjacentRulesetNodesWithSameSelector.java",
        "NullGssSourceMapGenerator.java",
        "PassRunner.java",
        "PassUtil.java",
        "PrettyPrinter.java",
        "PrettyPrintingVisitor.java",
        "ProcessComponents.java",
        "ProcessKeyframes.java",
        "ProcessRefiners.java",
        "RemoveDefaultDeclarations.java",
        "RemoveEmptyValues.java",
        "RemoveVendorSpecificProperties.java",
        "ReplaceConstantReferences.java",
        "ReplaceMixins.java",
        "ResolveCustomFunctionNodes.java",
        "ResolveCustomFunctionNodesForChunks.java",
        "SExprPrinter.java",
        "SExprPrintingVisitor.java",
        "SplitRulesetNodes.java",
        "StrictCss2.java",
        "StrictCss3.java",
        "StrictCssBase.java",
        "TemplateCompactPrinter.java",
        "TemplateCompactPrintingVisitor.java",
        "UniformVisitor.java",
        "UnrollLoops.java",
        "UnsafeMergeRulesetNodes.java",
        "ValidatePropertyValues.java",
        "VerifyRecognizedProperties.java",
        "WarnOnCustomProperty.java",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/com/google/common/css",
        "//src/com/google/common/css/compiler/ast",
        "//src/com/google/common/css/compiler/gssfunctions",
        "@com_google_code_findbugs_jsr305//jar",
        "@com_google_guava//jar",
        "@com_google_javascript_closure_compiler//jar",
    ],
)
