## Copyright 2018 The Closure Stylesheets Authors.
##
## Licensed under the Apache License, Version 2.0 (the "License");
## you may not use this file except in compliance with the License.
## You may obtain a copy of the License at
##
##     http://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS,
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
## See the License for the specific language governing permissions and
## limitations under the License.

licenses(["notice"])  # Apache 2.0

java_test(
    name = "DefaultGssFunctionMapProviderTest",
    size = "small",
    srcs = [
        "DefaultGssFunctionMapProviderTest.java",
    ],
    test_class = "com.google.common.css.compiler.gssfunctions.DefaultGssFunctionMapProviderTest",
    deps = [
        "//src/com/google/common/css/compiler/ast",
        "//src/com/google/common/css/compiler/gssfunctions",
        "//src/com/google/common/css/compiler/passes",
        "//tests/com/google/common/css/compiler/ast/testing",
        "@com_google_guava//jar",
        "@com_google_truth//jar",
    ],
)

java_test(
    name = "GssFunctionsTest",
    size = "small",
    srcs = [
        "GssFunctionsTest.java",
    ],
    test_class = "com.google.common.css.compiler.gssfunctions.GssFunctionsTest",
    deps = [
        "//src/com/google/common/css/compiler/ast",
        "//src/com/google/common/css/compiler/gssfunctions",
        "@com_google_guava//jar",
        "@com_google_truth//jar",
    ],
)
